<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nota1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@color/blue_dark"
        android:gravity="center"
        android:hint="@string/nota_1"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <EditText
        android:id="@+id/nota2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/blue_dark"
        android:gravity="center"
        android:hint="@string/nota_2"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintTop_toTopOf="@+id/nota1" />

    <EditText
        android:id="@+id/nota3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@color/blue_dark"
        android:gravity="center"
        android:hint="@string/nota_3"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/nota1"
        app:layout_constraintTop_toBottomOf="@+id/nota1" />

    <EditText
        android:id="@+id/nota4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/blue_dark"
        android:gravity="center"
        android:hint="@string/nota_4"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/nota2"
        app:layout_constraintTop_toTopOf="@+id/nota3" />

    <EditText
        android:id="@+id/edit_of_absences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@color/blue_dark"
        android:gravity="center"
        android:hint="@string/number_of_absences"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/nota4"
        app:layout_constraintStart_toStartOf="@+id/nota3"
        app:layout_constraintTop_toBottomOf="@+id/nota3" />

    <TextView
        android:id="@+id/message_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_of_absences" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue_dark2"
        android:padding="10dp"
        android:text="@string/text_calculate"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_of_absences" />

</androidx.constraintlayout.widget.ConstraintLayout>